testsuite/tests/deriving/should_fail/drvfail004.stderr
drvfail004.hs:8:12: error: [GHC-39999]
    • Could not deduce ‘Eq (Foo a b)’
        arising from the 'deriving' clause of a data type declaration
      from the context: (Ord a, Ord b)
        bound by the deriving clause for ‘Ord (Foo a b)’
        at drvfail004.hs:8:12-14
      Possible fix:
        use a standalone 'deriving instance' declaration,
          so you can specify the instance context yourself
    • When deriving the instance for (Ord (Foo a b))

